# lance-namespace

./: .bumpversion.toml  pyproject.toml
docs/src/: spec.yaml
java/: Makefile  async-client-pom.xml  pom.xml
java/lance-namespace-apache-client/: README.md  pom.xml
java/lance-namespace-apache-client/api/: openapi.yaml
java/lance-namespace-apache-client/docs/: AddVirtualColumnEntry.md  AlterTableDropColumnsRequest.md  AlterVirtualColumnEntry.md  CreateTableIndexRequest.md  DataApi.md  IndexApi.md  IndexContent.md  MergeInsertIntoTableRequest.md  MetadataApi.md  PartitionField.md  TableApi.md  UpdateFieldMetadataEntry.md
java/lance-namespace-async-client/: README.md  pom.xml
java/lance-namespace-async-client/api/: openapi.yaml
java/lance-namespace-async-client/docs/: AlterColumnsEntry.md  CountTableRowsRequest.md  DataApi.md  IndexApi.md  MetadataApi.md  QueryTableRequest.md  StringFtsQuery.md  TableApi.md  UpdateFieldMetadataResponse.md
java/lance-namespace-core/: pom.xml
java/lance-namespace-core-async/: pom.xml
java/lance-namespace-springboot-server/: pom.xml
python/: Makefile
python/lance_namespace/: pyproject.toml
python/lance_namespace_urllib3_client/: README.md  pyproject.toml
python/lance_namespace_urllib3_client/docs/: AddVirtualColumnEntry.md  AlterColumnsEntry.md  AlterTableBackfillColumnsRequest.md  AlterTableDropColumnsRequest.md  AlterVirtualColumnEntry.md  AnalyzeTableQueryPlanRequest.md  CountTableRowsRequest.md  CreateTableIndexRequest.md  DataApi.md  DeleteFromTableRequest.md  ErrorResponse.md  IndexApi.md  IndexContent.md  MatchQuery.md  MaterializedViewUdtfEntry.md  MergeInsertIntoTableRequest.md  MetadataApi.md  PartitionField.md  PhraseQuery.md  QueryTableRequest.md  QueryTableRequestColumns.md  StringFtsQuery.md  TableApi.md  UpdateFieldMetadataEntry.md  UpdateFieldMetadataResponse.md  UpdateTableRequest.md
python/lance_namespace_urllib3_client/lance_namespace_urllib3_client/: __init__.py  api_client.py  configuration.py
python/lance_namespace_urllib3_client/test/: test_add_columns_entry.py  test_add_virtual_column_entry.py  test_alter_columns_entry.py  test_alter_table_add_columns_request.py  test_alter_table_alter_columns_request.py  test_alter_table_backfill_columns_request.py  test_alter_table_drop_columns_request.py  test_alter_virtual_column_entry.py  test_analyze_table_query_plan_request.py  test_boolean_query.py  test_boost_query.py  test_create_materialized_view_request.py  test_create_table_index_request.py  test_explain_table_query_plan_request.py  test_fts_query.py  test_index_content.py  test_list_table_indices_response.py  test_match_query.py  test_materialized_view_udtf_entry.py  test_merge_insert_into_table_request.py  (+9 more)
rust/: Cargo.toml  Makefile  reqwest-client.toml
rust/lance-namespace-base/: Cargo.toml
rust/lance-namespace-base/src/: base.rs  lib.rs
rust/lance-namespace-reqwest-client/: README.md
tests/: test_field_path_contract.py
(+167 files in other folders)
