[project]
name = "lance-namespace"
version = "0.8.4"
description = "Lance Namespace interface and plugin registry"
readme = "README.md"
authors = [{ name = "LanceDB Devs", email = "dev@lancedb.com" }]
license = { text = "Apache-2.0" }
keywords = ["lance", "namespace", "lancedb", "vector-database"]
requires-python = ">=3.8"
dependencies = [
    "lance-namespace-urllib3-client==0.8.4",
]

[dependency-groups]
dev = [
    "pytest>=7.2.1",
    "pytest-cov>=2.8.1",
]

[project.urls]
Repository = "https://github.com/lance-format/lance-namespace"
Documentation = "https://lance.org/format/namespace/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lance_namespace"]

[tool.pytest.ini_options]
testpaths = ["lance_namespace/tests"]
